# vizy

./: .gitignore  AGENTS.md  README.md  __init__.py  pyproject.toml
tests/: test_e2e.py  test_vizy.py
vizy/: __init__.py  format_detection.py
