[project]
name = "vizy"
version = "1.1.0"
description = "Tiny tensor visualiser: vz.plot(t) / vz.save(t)"
authors = [{name = "Anıl Zeybek"}]
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["tensor", "visualization", "pytorch", "numpy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.20.0",
    "Pillow>=8.0.0",
]

[project.optional-dependencies]
torch = ["torch"]

[project.urls]
Repository = "https://github.com/anilzeybek/vizy"
Issues = "https://github.com/anilzeybek/vizy/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
exclude = [
    "tests/data/",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "tests/data/",
]

[dependency-groups]
dev = [
    "ruff>=0.11.11",
    "pytest>=7.0.0",
    "torch",
    "Pillow",
    "imagehash>=4.3.2",
]

[tool.ruff]
line-length = 120
