[project]
name = "vizy"
version = "1.4.0"
description = "Tiny tensor visualiser: vizy.plot(t) / vizy.save(t)"
authors = [{name = "Anıl Zeybek"}]
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["tensor", "visualization", "pytorch", "jax", "numpy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.20.0",
    "Pillow>=8.0.0",
]

[project.optional-dependencies]
torch = ["torch"]
jax = ["jax"]

[project.urls]
Repository = "https://github.com/anilzeybek/vizy"
Issues = "https://github.com/anilzeybek/vizy/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
exclude = [
    "tests/data/",
    "assets/",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "tests/data/",
    "assets/",
]

[dependency-groups]
dev = [
    "ruff>=0.11.11",
    "pytest>=7.0.0",
    "torch",
    "jax",
    "Pillow",
    "imagehash>=4.3.2",
    "ty>=0.0.35",
    "ipykernel>=7.1.0",
]

[tool.ruff]
line-length = 120
lint.select = ["ALL"]
lint.ignore = [
    "COM812",
    "EM101",
    "EM102",
    "D100",
    "TRY003",
    "S101",
    "TC006",
    "PLR2004",
    "T201",
    "D103",
    "D104",
    "D203",
    "D213",
    "RET504"
]

[tool.ty]
src.include = ["vizy"]
src.exclude = ["**/__pycache__/**", "**/dist/**", "**/build/**"]
